# django-content-license

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  CONTRIBUTING.rst  DEVELOPMENT.md  GOALS.md  HISTORY.md  LICENSE  MANIFEST.in  README.md  README.rst  docker-compose.yml  pyproject.toml  requirements.txt  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: build.yml  dependencies.yml  on-release-main.yml  tests.yml
docs/: conf.py  index.rst  installation.rst  licensing.rst  modules.rst  readme.md  usage.rst
docs/adr/: 0001-licenses-as-database-catalogue.md  0002-attribution-via-injected-display-method.md  0003-retire-by-deprecation-not-deletion.md  0004-creators-is-the-attribution-contract.md
docs/agents/: alignment-plan.md  ci-audit.md  domain.md  triage-labels.md
example/: admin.py  models.py  urls.py
example/migrations/: 0002_alter_testmodel_license.py  0003_rename_license_testmodel_content_license.py
example/templates/: example.html
licensing/: admin.py  apps.py  categories.py  fields.py  mixins.py  models.py  utils.py
licensing/migrations/: 0001_initial.py
licensing/templates/licensing/: snippet.html
memory/: constitution.md
tests/: README.md  conftest.py  dev_urls.py  prod_urls.py  settings.py  test_adaptors.py  test_admin.py  test_fields.py  test_managers.py  test_models.py  test_utils.py  urls.py
tests/example/: admin.py  models.py
tests/example/migrations/: 0001_initial.py
