[tool.poetry]
name = "django-content-license"
version = "0.3.0"
description = "Store license information alongside your Django data models"
authors = ["Sam Jennings"]
license = "MIT"
readme = "README.md"
packages = [{include = "licensing"}]
homepage = "https://github.com/SamuelJennings/django-content-license"
keywords = ["django", "research", "science", "datasets", "research management", "open source", "open science", "FAIR"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
# Only actively supported Django releases (family standard). 5.2 LTS + current
# stable; dropping a version is a constitution-level change (memory/constitution.md).
django = ">=5.2"

[tool.poetry.group.dev.dependencies]
# Family dev-tooling bundle: pytest, pytest-django, ruff, black, mypy,
# django-stubs, deptry, pre-commit, coverage (mirrors django-easy-icons).
fairdm-dev-tools = { git = "https://github.com/FAIR-DM/dev-tools", extras = ["dev", "test"] }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py311']
preview = true

[tool.isort]
profile = "black"

[tool.mypy]
files = ["licensing"]
disallow_untyped_defs = "False"
disallow_any_unimported = "False"
ignore_missing_imports = "True"
no_implicit_optional = "True"
check_untyped_defs = "False"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
exclude = ["docs/","migrations/","tests/settings.py"]
mypy_path = "licensing/"
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.settings"
ignore_missing_model_attributes = "True"

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true
exclude = ['docs/']

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Mutable class attributes (noise on Django Meta: ordering/indexes)
    "RUF012",
    # Avoid long messages outside the exception class
    "TRY003",
    # Use of mark_safe (attribution HTML is escaped via the template layer)
    "S308",
    # Standard pseudo-random generators
    "S311",
    # Class attribute shadowing a builtin (Django field names)
    "A003",
    # Star imports
    "F403",
    "F405",
    # Function too complex
    "C901",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101","S105"]
# "**/models.py" = ["A003",]
# "docs/conf.py" = ["*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = [".", "tests"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "tests.py", "*_tests.py"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=licensing",
    "--cov-report=html",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

filterwarnings = [
    "ignore",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.coverage.report]
skip_empty = true
show_missing = true

[tool.coverage.run]
branch = "true"
source = ["licensing"]


[tool.deptry]
extend_exclude = [
    "tasks.py",
    "tests/",
    "example/",
    "docs/",
]

[tool.deptry.per_rule_ignores]
DEP003 = ["licensing"]
